--- a/css/freedraw.css
+++ b/css/freedraw.css
@@ -1,3 +1,14 @@
+* {
+    position: relative;
+    margin:0px;
+    padding:0px;
+    border:none;
+	outline:0px;
+	font-family:monospace;
+	font-weight: normal;
+    background-color: transparent;
+}
+
 html {
 	position:static;
 	background:rgb(0,0,0);
@@ -12,13 +23,56 @@ canvas {
 p {
     position:absolute;
 	font-size:16px;
-	font-family:monospace;
+    /*
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -o-user-select:none;
+    user-select:none;
+    */
+}
+button {
+	background-color:#bbaaff;
+	width:100px;
+	height:20px;
+	right:0px;
+	top:0px;
+	cursor:pointer;
+}
+table {
+    vertical-align:middle;
+}
+
+.editClosed {
+	left:0px;
+	width:140px;
+	height:40px;
+	padding:10px;
+	background:rgb(30,30,255);
+	color:white;
+}
+.editOpen {
+	left:0px;
+	width:140px;
+	height:40px;
+	padding:10px;
+	font-size:10px;
+	background:white;	
+	color:black;
+}
+.charUnselected {
+    width:30px;
+    height:30px;
+	padding:8px;
+	font-size:8px;
+    background:white;
+    color:black;
 }
 
 #input {
 	color:rgba(0,0,0,255);
 	position:absolute;
-	left:230px;
+	left:320px;
 	top:14px;
 	width:950px;
 	font-size:20px;
@@ -33,9 +87,88 @@ p {
 	top:20px;
 	font-size:18px;
 }
-
+#editClosedText {
+	font-size:20px;
+}
+#editCharacterSwitch {
+	z-index:4;
+	position:absolute;
+	font-size:20px;
+	font-family:monospace;
+}
 #globalCanvas{
     position:absolute;
 	left:0px;
 	top:120px;
+}
+
+#wrapper {
+    width:960px;
+    margin:0px auto;
+}
+#innerWrapper {
+    height:1660px;
+    width:960px;
+    margin:0px auto;
+}
+
+#canvasTable {
+	position: absolute;
+	top: 360px;
+	margin: 0px;
+	padding: 10px;
+	border: 0px;
+	border-spacing: 0px;
+	border-collapse: separate;
+}
+#buttonTable {
+	position: absolute;
+	top: 180px;
+	margin: 0px;
+	padding: 10px;
+	border: 0px;
+	border-spacing: 0px;
+	border-collapse: separate;
+}
+
+#editorCanvas {
+	background-color: #bbbbbb;
+	position: relative;
+    cursor: crosshair;
+}
+
+#tool_title {
+	top: 120px;
+	padding: 10px;
+	height: 10px;
+}
+#tool_description {
+	top: 116px;
+	padding: 10px;
+}
+
+#gradientCanvas {
+	background-color: #ffffff;
+	position: relative;
+}
+
+#editorTextArea {
+	font-family: Courier New, Courier New, Courier, monospace;
+	font-weight: normal;
+	font-size: 14px;
+	width: 370px;
+	height: 600px;
+	background-color: #005E8A;
+	color: #ffffff;
+	position: relative;
+	padding: 10px;
+	resize: none;
+	outline: none;
+	wrap: soft;
+}
+
+.color {
+	border: 2px inset;
+	height: 20px;
+	cursor: pointer;
 }
