--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,4 @@
+/*
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -15,6 +16,7 @@ font-size: 100%;
 vertical-align: baseline;
 background: transparent;
 }
+    */
 body {
 line-height: 1;
 }
